--- a/package.json
+++ b/package.json
@@ -3,32 +3,50 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3000",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "type-check": "tsc --noEmit",
+    "analyze": "cross-env ANALYZE=true next build",
+    "build:production": "npm run lint && npm run type-check && npm run build",
+    "preview": "npm run build && npm run start"
   },
   "dependencies": {
     "@stripe/react-stripe-js": "^3.9.1",
     "@stripe/stripe-js": "^7.8.0",
+    "@types/js-cookie": "^3.0.6",
+    "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
+    "js-cookie": "^3.0.5",
     "mongoose": "^8.17.2",
-    "multer": "^2.0.2",
     "next": "15.4.3",
     "next-auth": "^4.24.11",
+    "node-fetch": "^2.7.0",
+    "nodemailer": "^6.10.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
-    "stripe": "^18.4.0"
+    "stripe": "^18.4.0",
+    "swr": "^2.3.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@next/bundle-analyzer": "^15.5.0",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "24.1.0",
-    "@types/react": "19.1.9",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/node": "^24.1.0",
+    "@types/nodemailer": "^7.0.1",
+    "@types/react": "^19.1.9",
+    "@typescript-eslint/eslint-plugin": "^8.40.0",
+    "@typescript-eslint/parser": "^8.40.0",
+    "cross-env": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.4.3",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4",
+    "typescript": "^5.9.2",
+    "web-vitals": "^5.1.0"
   }
 }
