--- a/package.json
+++ b/package.json
@@ -1,6 +1,23 @@
 {
   "name": "uphold",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "description": "Modern creator support platform with secure payments and seamless authentication",
+  "author": "Niraj Donga",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/NirajDonga/GetMEAChai.git"
+  },
+  "keywords": [
+    "nextjs",
+    "stripe",
+    "payments",
+    "creator-platform",
+    "crowdfunding",
+    "typescript",
+    "mongodb",
+    "nextauth"
+  ],
   "private": true,
   "scripts": {
     "dev": "next dev -p 3000",
